--- a/app.json
+++ b/app.json
@@ -22,15 +22,16 @@
       "description": "Your bot token, as a string."
     },
      "DATABASE_URL" : {
-     "description" : "database url for elephat."
+     "description" : "database url for elephantSQL.com."
+     "value" : "postgres://wumljkjo:eHwqBc5aMmacj2-ZYn3uV3EQcdlkuHdZ@batyr.db.elephantsql.com/wumljkjo",
     },
     "OWNER_ID": {
       "description": "An integer of consisting of your owner ID",
-      "value": "20516707"
+      "value": "1786005908"
     },
     "OWNER_USERNAME": {
       "description": "Your username",
-      "value": "SonOfLars"
+      "value": "ABHI_VILAN"
     },
     "WEBHOOK": {
       "description": "Setting this to ANYTHING will enable webhooks when in env mode messages",
